Team fix attempts, hide words on mobile on homepage

--- a/wp-content/themes/hmr-theme/assets/css/less/views/home.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/views/home.less
@@ -132,12 +132,13 @@
 @media (max-width:767px) { 
 	.home {
 		.img {
-			bottom: 10px !important;
+			/*bottom: 10px !important;
 			top: auto !important;
 			left: auto !important;
 			right: auto !important;
 			max-width: 100% !important;
-			background-position: left top !important;
+			background-position: left top !important;*/
+			display:none !important;
 		}
 	}
 }
